--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <img src="img/fotot.3.png" alt="">
                     <div class="logo">
                         <h6>YAŞAM</h6>
-                        <P>KTAR</P>
+                        <P>KART</P>
                     </div>
                 </div>
                 <ul>
@@ -32,6 +32,7 @@
                     <li><a href="">Bizə qoşulmaq</a></li>
                     <li><a href="">Partniyerlərimiz</a></li>
                     <li><a href="">Haqqımızda</a></li>
+                    <li><a href="">Əlqə</a></li>
                 </ul>
 
                 <div class="katagoria">
@@ -41,8 +42,16 @@
 
                 <div class="left-footer">
                     <div class="d-flex mb-3">
-                        <div class="language">
-                            <p>AZN</p><i class="fas fa-angle-down"></i>
+                        <div class="language m-0">
+                            <p class="val" id="activ-val">AZN</p><i class="fas fa-angle-down"></i>
+                        </div>
+                        <div class="language-section">
+                            <div class="language mt-0">
+                                <p class="val">ENG</p>
+                            </div>
+                            <div class="language">
+                                <p class="val">RUS</p>
+                            </div>
                         </div>
                         <a class="adress" href="">
                             <i class="fab fa-facebook-f"></i>
@@ -56,6 +65,284 @@
             </div>
 
             <!-- ================ //left-menu ================ -->
+
+            
+
+            <!-- ================ home-left ================ -->
+
+            <div class="home-left">
+
+                <div class="home-left-img">
+                    <!-- <img src="img/foto5.png" alt=""> -->
+                </div>
+
+                <div class="home-cart">
+                    <div class="cart-section">
+                        <img src="img/foto7.png" alt="">
+                        <h3>Gümüş Kart</h3>
+                        <div class="cart-section-hover">
+
+                            <div class="hover-between">
+                                <img src="img/foto7.png" alt="">
+                                <h3>Gümüş Kart</h3>
+                            </div>
+
+                            <div class="hover-between">
+                                <h3>Partnyier</h3>
+                                <p>30% endirim</p>
+                            </div>
+
+                            <div class="hover-between">
+                                <h3>Tur paketi</h3>
+                                <p>30% endirim</p>
+                            </div>
+
+                            <div class="hover-between">
+                                <a href="">Əldə et</a>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                    <div class="cart-section">
+                        <img src="img/foto7.png" alt="">
+                        <h3>Qızıl Kart</h3>
+                        <div class="cart-section-hover">
+
+                            <div class="hover-between">
+                                <img src="img/foto7.png" alt="">
+                                <h3>Qızıl Kart</h3>
+                            </div>
+
+                            <div class="hover-between">
+                                <h3>Partnyier</h3>
+                                <p>50% endirim</p>
+                            </div>
+
+                            <div class="hover-between">
+                                <h3>Tur paketi</h3>
+                                <p>50% endirim</p>
+                            </div>
+
+                            <div class="hover-between">
+                                <a href="">Əldə et</a>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="home-footer d-flex flex-column justify-content-center px-4 ">
+                    <h6>kartdan nece istifade etmek olar?</h6>
+                    <div class="d-flex flex-column w-100 justify-content-center align-items-center">
+                        <div class="info-icon">
+                            <div class="card-icons">
+                                <div class="icons">
+                                    <i class="fas fa-credit-card"></i>
+                                </div>
+                            </div>
+
+                            <div class="awrow-icon">
+                                <i class="fas fa-long-arrow-alt-right"></i>
+                            </div>
+
+                            <div class="card-icons">
+                                <div class="icons">
+                                    <i class="fas fa-cash-register"></i>
+                                </div>
+                            </div>
+
+                            <div class="awrow-icon">
+                                <i class="fas fa-long-arrow-alt-right"></i>
+                            </div>
+
+                            <div id="percent" class="card-icons">
+                                <div class="icons">
+                                    <i class="fas fa-percent"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="icons-p">
+                            <p>kartı bizdən<br> əldə edin</p>
+                            <p>kartı<br> partnierlərimizə<br> teqdim edin</p>
+                            <p>endirim qazanın</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- ================ //home-left ================ -->
+
+
+            <!-- ================ partners ================ -->
+
+            <div class="partners-right d-flex flex-wrap">
+                <!-- <div class="partners-btn">
+                    <button> TOP<br> PARTNERS</button>
+                    <button>LATEST<br> OFFERS</button>
+                </div> -->
+                <div class="partners">
+                    <img src="img/foto6.png" alt="">
+                    <div class="partners-hover">
+                        <div class="hover-icon d-flex justify-content-between">
+                            <div class="d-flex">
+                                <a href=""><i class="fab fa-instagram"></i></a>
+                                <a href=""><i class="fab fa-facebook-square"></i></a>
+                            </div>
+                            <h4>15%</h4>
+                        </div>
+                        <a id="url" href="http://shaurma.az/karyera/">shaurma.az</a>
+                    </div>
+                </div>
+                <div class="partners">
+                    <img src="img/foto6.png" alt="">
+                   <div class="partners-hover">
+                        <div class="hover-icon d-flex justify-content-between">
+                             <div class="d-flex">
+                                <a href=""><i class="fab fa-instagram"></i></a>
+                                <a href=""><i class="fab fa-facebook-square"></i></a>
+                            </div>
+                            <h4>15%</h4>
+                        </div>
+                        <a id="url" href="http://shaurma.az/karyera/">shaurma.az</a>
+                    </div>
+                </div>
+                <div class="partners">
+                    <img src="img/foto6.png" alt="">
+                    <div class="partners-hover">
+                        <div class="hover-icon d-flex justify-content-between">
+                             <div class="d-flex">
+                                <a href=""><i class="fab fa-instagram"></i></a>
+                                <a href=""><i class="fab fa-facebook-square"></i></a>
+                            </div>
+                            <h4>15%</h4>
+                        </div>
+                        <a id="url" href="http://shaurma.az/karyera/">shaurma.az</a>
+                    </div>
+                </div>
+                <div class="partners">
+                    <img src="img/foto6.png" alt="">
+                    <div class="partners-hover">
+                        <div class="hover-icon d-flex justify-content-between">
+                             <div class="d-flex">
+                                <a href=""><i class="fab fa-instagram"></i></a>
+                                <a href=""><i class="fab fa-facebook-square"></i></a>
+                            </div>
+                            <h4>15%</h4>
+                        </div>
+                        <a id="url" href="http://shaurma.az/karyera/">shaurma.az</a>
+                    </div>
+                </div>
+                <div class="partners">
+                    <img src="img/foto6.png" alt="">
+                    <div class="partners-hover">
+                        <div class="hover-icon d-flex justify-content-between">
+                             <div class="d-flex">
+                                <a href=""><i class="fab fa-instagram"></i></a>
+                                <a href=""><i class="fab fa-facebook-square"></i></a>
+                            </div>
+                            <h4>15%</h4>
+                        </div>
+                        <a id="url" href="http://shaurma.az/karyera/">shaurma.az</a>
+                    </div>
+                </div>
+                <div class="partners">
+                    <img src="img/foto6.png" alt="">
+                    <div class="partners-hover">
+                        <div class="hover-icon d-flex justify-content-between">
+                             <div class="d-flex">
+                                <a href=""><i class="fab fa-instagram"></i></a>
+                                <a href=""><i class="fab fa-facebook-square"></i></a>
+                            </div>
+                            <h4>15%</h4>
+                        </div>
+                        <a id="url" href="http://shaurma.az/karyera/">shaurma.az</a>
+                    </div>
+                </div>
+                <div class="partners">
+                    <img src="img/foto6.png" alt="">
+                    <div class="partners-hover">
+                        <div class="hover-icon d-flex justify-content-between">
+                             <div class="d-flex">
+                                <a href=""><i class="fab fa-instagram"></i></a>
+                                <a href=""><i class="fab fa-facebook-square"></i></a>
+                            </div>
+                            <h4>15%</h4>
+                        </div>
+                        <a id="url" href="http://shaurma.az/karyera/">shaurma.az</a>
+                    </div>
+                </div>
+                <div class="partners">
+                    <img src="img/foto6.png" alt="">
+                    <div class="partners-hover">
+                        <div class="hover-icon d-flex justify-content-between">
+                             <div class="d-flex">
+                                <a href=""><i class="fab fa-instagram"></i></a>
+                                <a href=""><i class="fab fa-facebook-square"></i></a>
+                            </div>
+                            <h4>15%</h4>
+                        </div>
+                        <a id="url" href="http://shaurma.az/karyera/">shaurma.az</a>
+                    </div>
+                </div>
+                <div class="partners">
+                    <img src="img/foto6.png" alt="">
+                    <div class="partners-hover">
+                        <div class="hover-icon d-flex justify-content-between">
+                             <div class="d-flex">
+                                <a href=""><i class="fab fa-instagram"></i></a>
+                                <a href=""><i class="fab fa-facebook-square"></i></a>
+                            </div>
+                            <h4>15%</h4>
+                        </div>
+                        <a id="url" href="http://shaurma.az/karyera/">shaurma.az</a>
+                    </div>
+                </div>
+                <div class="partners">
+                    <img src="img/foto6.png" alt="">
+                    <div class="partners-hover">
+                        <div class="hover-icon d-flex justify-content-between">
+                             <div class="d-flex">
+                                <a href=""><i class="fab fa-instagram"></i></a>
+                                <a href=""><i class="fab fa-facebook-square"></i></a>
+                            </div>
+                            <h4>15%</h4>
+                        </div>
+                        <a id="url" href="http://shaurma.az/karyera/">shaurma.az</a>
+                    </div>
+                </div>
+                <div class="partners">
+                    <img src="img/foto6.png" alt="">
+                    <div class="partners-hover">
+                        <div class="hover-icon d-flex justify-content-between">
+                             <div class="d-flex">
+                                <a href=""><i class="fab fa-instagram"></i></a>
+                                <a href=""><i class="fab fa-facebook-square"></i></a>
+                            </div>
+                            <h4>15%</h4>
+                        </div>
+                        <a id="url" href="http://shaurma.az/karyera/">shaurma.az</a>
+                    </div>
+                </div>
+                <div class="partners">
+                    <img src="img/foto6.png" alt="">
+                    <div class="partners-hover">
+                        <div class="hover-icon d-flex justify-content-between">
+                             <div class="d-flex">
+                                <a href=""><i class="fab fa-instagram"></i></a>
+                                <a href=""><i class="fab fa-facebook-square"></i></a>
+                            </div>
+                            <h4>15%</h4>
+                        </div>
+                        <a id="url" href="http://shaurma.az/karyera/">shaurma.az</a>
+                    </div>
+                </div>
+            </div>
+
+            
         </div>
     </div>
 
